--- a/index.html
+++ b/index.html
@@ -11,15 +11,65 @@
 </head>
 <body>
     <div id="pagina">
-        <nav>
-            <div></div>
-
+        <nav>            
+            <div id="titulo">
+                <h1>ArtMuseum</h1>
+            </div>
+            <div id="link">
+                <a href="#" class="link">Home</a>
+                <a href="#" class="link">Galeria</a>
+                <a href="#" class="link">Contato</a>
+            </div>
         </nav>
-        <header></header>
-        <main></main>
-    </div>
-    <footer></footer>
+        <header>            
+                <h1>Destaques da semana</h1>            
+        </header>
+        <main>
+            <div id="post">
+                <div>
+                    <h3>Elizabeth</h3>
+                </div>
+                <div>
+                    <img src="images/images/elizabeth.jpg" alt="" id="img">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus nulla quas totam porro, voluptatem tenetur esse ratione veniam fugiat ducimus repellendus alias veritatis doloremque reprehenderit consequuntur qui natus quam! Doloribus.</p>
+                    <button type="button" class="button">Ver Sobre</button>
+                </div> 
+            </div>
+            <div id="post2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae amet necessitatibus adipisci corporis deserunt vitae aliquid. Tempora assumenda vitae quas, nulla eos odio voluptas molestiae soluta eum est excepturi unde! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rem porro ipsa, quidem sunt tempore debitis odio hic at totam consectetur? Facilis doloremque aliquam totam amet possimus earum modi dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus numquam, sapiente dolores reprehenderit, autem saepe ratione officiis nam reiciendis id nulla repudiandae ipsa commodi laudantium excepturi, ut dolorem. Tempora, optio.</p>
+            </div>           
 
-    
+            <div id="post3">
+                <div id="destaque">
+                    <h1>Artes</h1>
+                 </div>
+                 <div id="banner">
+                    <div id="bannerControl">
+                        <h3>Título da arte</h3>
+                        <img src="images/images/arte1.jpg" alt="" class="imagemBanner">
+                        <p>Descrição da arte</p>
+                        <button type="button" class="button">Ver Sobre</button>
+                    </div>
+                    <div id="bannerControl">
+                        <h3>Título da arte</h3>
+                        <img src="images/images/arte2.jpg" alt="" class="imagemBanner">
+                        <p>Descrição da arte</p>
+                        <button type="button" class="button">Ver Sobre</button>
+                    </div>
+                    <div id="bannerControl">
+                        <h3>Título da arte</h3>
+                        <img src="images/images/arte3.jpg" alt="" class="imagemBanner">
+                        <p>Descrição da arte</p>
+                        <button type="button" class="button">Ver Sobre</button>
+                    </div>
+                    
+                </div>
+            </div>
+        </main>
+    </div>
+    <footer>
+        <h3>ArtMuseum @ 2023</h3>
+    </footer>    
 </body>
+
 </html>
