--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
                     <h3>Elizabeth</h3>
                 </div>
                 <div>
-                    <img src="images/images/elizabeth.jpg" alt="" id="img">
+                    <picture>
+                        <source media="(max-width:730px)" srcset="images/images/elizabethMenor.png" class="img">
+                        <img src="images/images/elizabeth.jpg" alt="" class="img">
+                    </picture>
+
+
+
+                    
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus nulla quas totam porro, voluptatem tenetur esse ratione veniam fugiat ducimus repellendus alias veritatis doloremque reprehenderit consequuntur qui natus quam! Doloribus.</p>
                     <button type="button" class="button">Ver Sobre</button>
                 </div> 
