--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 </ul>
             </div>
         </nav>
+        <button id="menuButton">
+            =
+        </button>
                     
                            
         </header>
